# ai-daily-digest

./: .env.example  MANIFEST.in  README.md  README_CN.md  pyproject.toml  vercel.json
.claude/: settings.json
.github/workflows/: daily-digest.yml  deploy-web.yml  run-arxiv-sanity-bot.yml  test-digest-email.yml
arxiv_sanity_bot/: config.py  schemas.py  signature.py
arxiv_sanity_bot/arxiv/: arxiv_abstracts.py
arxiv_sanity_bot/cli/: arxiv_sanity_bot.py
arxiv_sanity_bot/email/: __init__.py  email_sender.py  smtp_sender.py
arxiv_sanity_bot/models/: content_processor.py  openai.py
arxiv_sanity_bot/notion/: __init__.py  notion_sender.py
arxiv_sanity_bot/sources/: __init__.py  github_trending.py  huggingface_extended.py  tech_blogs.py  twitter_source.py  youtube_source.py
docs/: dev-log.md
docs/plans/: 2026-02-13-feat-twitter-youtube-content-sources-plan.md  2026-02-13-refactor-simplify-email-template-plan.md  2026-02-14-fix-bookmarks-notes-plan.md  2026-02-18-feat-notion-output-plan.md
docs/solutions/integration-issues/: notion-output-implementation.md
docs/solutions/integration-patterns/: twitter-youtube-content-aggregation.md
docs/solutions/integrations/: notion-output.md
docs/solutions/ui-bugs/: notion-inspired-email-template-redesign.md
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
web/api/: list.ts  note.ts  star.ts  unstar.ts
web/api/_lib/: crypto.ts  github.ts
web/api/auth/: callback.ts  login.ts  logout.ts  me.ts
web/public/: 404.html
web/src/: App.tsx  config.ts  index.css  main.tsx
web/src/utils/: api.ts
(+7 files in other folders)
