[project]
name = "arxiv_sanity_bot"
version = "1.0.0"
description = "A bot that reads papers from arxiv-sanity, summarizes them using ChatGPT and post them on Twitter"
readme = "README.md"
authors = [{"name" = "Giacomo Vianello"}]
requires-python = ">=3.12"
dependencies = [
    "openai",
    "tweepy",
    "lxml[html_clean]",
    "pandas",
    "httpx",
    "click",
    "arxiv",
    "pypdf[image]",
    "PyMuPDF",
    "firebase",
    "firebase-admin",
    "atoma",
    "numpy",
    "python-dotenv",
    "tenacity",
    "pydantic",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "sendgrid>=6.11.0",
    "python-dateutil>=2.8.0",
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["arxiv_sanity_bot"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.5",
    "types-requests>=2.32.4.20250913",
    "types-python-dateutil>=2.8.0",
    "black>=24.0.0",
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-asyncio",
    "pytest-cov",
    "mock-firestore",
    "freezegun"
]
twitter = [
    "tweepy>=4.14.0",
]
youtube = [
    "google-api-python-client>=2.100.0",
]
all = [
    "tweepy>=4.14.0",
    "google-api-python-client>=2.100.0",
]

#[options.entry_points]
#console_scripts = [
#    "arxiv-sanity-bot = arxiv_sanity_bot.cli.arxiv_sanity_bot:bot",
#]

[project.scripts]
arxiv-sanity-bot = "arxiv_sanity_bot.cli.arxiv_sanity_bot:cli"

